<resources>
    <string name="app_name">Airsoft Loadout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="title_equipment">Equipment</string>
    <string name="title_settings">Settings</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="username_input_hint">Username</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="login_text">Login</string>
    <string name="already_registered_text">Already a member?</string>
    <string name="stored_user_credentials" translatable="false">credentialPreferences</string>
    <string name="stored_user_id_key" translatable="false">logged-in-user</string>
    <string name="not_a_member_prompt">Not a member?</string>
    <string name="invalid_username_length">Username must be 3 to 16 characters long</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password_length">Password must be at least 5 characters long</string>
    <string name="username_exists_message">Username already in use</string>
    <string name="email_exists_message">Email address already in use</string>
    <string name="incorrect_email_text">The provided email is incorrect</string>
    <string name="incorrect_password_text">Incorrect password</string>
    <string name="store_locations_filename" translatable="false">airsoft_field_locations.json</string>
    <string name="notification_title">Be a Mindful Airsoft Gun Owner</string>
    <string name="notification_text">Only have your gun visible out on the field.</string>
    <string name="title_preferences">Settings</string>
    <string name="disable_notifications_pref_key" translatable="false">disable_notifications</string>
    <string name="disable_notifications_pref_title">Disable Notifications</string>
    <string name="notifications_category_title">Notifications</string>
    <string name="app_theme_category_title">App Theme</string>
    <string name="enable_dark_mode_pref_key" translatable="false">enable_dark_mode</string>
    <string name="enable_dark_mode_pref_title">Dark Mode</string>
    <string name="channel_name" translatable="false">care_with_gun_reminder</string>
    <string name="channel_description" translatable="false">Notification channel used to alter the user to be careful with their guns in public.</string>
    <string name="my_loadout_image_description">My loadout</string>
    <string name="take_new_picture_button_text">Take new picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="share_intent_value">Want to try Airsoft? Take a look at https://www.zone67.co.nz or https://thearena.co.nz.</string>
    <string name="share_experience">Share Experience</string>
</resources>
